--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html>
   <head>
-
+  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.23.0/mapbox-gl.css' rel='stylesheet' />
+  <link href='https://www.mapbox.com/base/latest/base.css' rel='stylesheet' />
   </head>
   <body>
-    <div id="app">
-      
+    <div id="AppInterface">
     </div>
+    <div id="map">
+      </div>
   <script src="bundle.js"></script>
   </body>
 </html>
