--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,20 @@
 <!doctype html>
 <html>
-  <head>
+
+<head>
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.23.0/mapbox-gl.css' rel='stylesheet' />
   <link href='https://www.mapbox.com/base/latest/base.css' rel='stylesheet' />
-  </head>
-  <body>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto:400,400i,700" rel="stylesheet">
+</head>
+
+<body>
+  <div id="app-wrapper">
     <div id="AppInterface">
     </div>
     <div id="map">
-      </div>
+    </div>
+  </div>
   <script src="bundle.js"></script>
-  </body>
+</body>
+
 </html>
