legend up and running, ready to be hooked up to field switches

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.23.0/mapbox-gl.css' rel='stylesheet' />
   <link href='https://www.mapbox.com/base/latest/base.css' rel='stylesheet' />
   <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto:400,400i,700" rel="stylesheet">
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
