--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
     <div id="map">
     </div>
   </div>
+  <div class="mainLoadingPane">
+      <div class="loadingSpinner" />
+  </div>
   <script src="bundle.js"></script>
 </body>
 
