fixed the loading spinner

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <div id="map">
     </div>
   </div>
-  <div class="mainLoadingPane">
+  <div id='mainLoadingPane' class="mainLoadingPane">
       <div class="loadingSpinner" />
   </div>
   <script src="bundle.js"></script>
