--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,11 @@
     <div id="map">
     </div>
   </div>
+  <!--<canvas id="legendCanvas" class='legendCanvas' width="300" >
+    <img id="legendImage" crossorigin="anonymous">
+  </canvas>-->
   <script src="bundle.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.3/jspdf.debug.js"></script>
 </body>
 
 </html>
