the most basic react map working, basically

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
 <head>
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.32.1/mapbox-gl.css' rel='stylesheet' />
   <link href='//mapbox.com/base/latest/base.css' rel='stylesheet' />
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto:400,400i,700" rel="stylesheet">
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
@@ -12,17 +11,8 @@
   <div id="mainLoadingPane" class="mainLoadingPane">
     <div class="loadingSpinner" ></div>
   </div>
-  <div id="app-wrapper">
-    <div id="AppInterface">
-    </div>
-    <div id="map">
-    </div>
-  </div>
-  <!--<canvas id="legendCanvas" class='legendCanvas' width="300" >
-    <img id="legendImage" crossorigin="anonymous">
-  </canvas>-->
+  <div id="appInterface-container" />
   <script src="bundle.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.3/jspdf.debug.js"></script>
 </body>
 
 </html>
