style configured better

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,12 @@
 
 <body>
   <div id="mainLoadingPane" class="mainLoadingPane">
-    <div class="loadingSpinner" ></div>
+    <div class="loadingBar-container" >
+      <div class="loadingBar" ></div>
+    </div>
+    <div class="loadingBar-container" >
+      <div class="loadingBar-backdrop" ></div>
+    </div>
   </div>
   <div id="appInterface-container" />
   <script src="bundle.js"></script>
