--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,11 @@
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.32.1/mapbox-gl.css' rel='stylesheet' />
   <link href='//mapbox.com/base/latest/base.css' rel='stylesheet' />
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
 </head>
 
 <body>
-  <div id="mainLoadingPane" class="mainLoadingPane">
+  <div id="primaryLoadingPane" class="loadingPane loadingPane-active">
     <div class="loadingBar-container" >
       <div class="loadingBar" ></div>
     </div>
