reverted to spinning loader

--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,7 @@
 
 <body>
   <div id="primaryLoadingPane" class="loadingPane loadingPane-active">
-    <div class="loadingBar-container" >
-      <div class="loadingBar" ></div>
-    </div>
-    <div class="loadingBar-container" >
-      <div class="loadingBar-backdrop" ></div>
-    </div>
+    <div class="loadingPane-spinner" ></div>
   </div>
   <div id="appInterface-container" />
   <script src="bundle.js"></script>
