added in new verbage and a tooltip on load of first map

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <title>Basemap Showcaser</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="theme-color" content="#3E95F8" />
