--- a/src/index.html
+++ b/src/index.html
@@ -2,20 +2,18 @@
 <html>
 
 <head>
-  <title>Basemap Showcaser</title>
+  <title>1-800-KATRILLION</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="theme-color" content="#3E95F8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.32.1/mapbox-gl.css' rel='stylesheet' />
-  <link href='//mapbox.com/base/latest/base.css' rel='stylesheet' />
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
 </head>
 
 <body>
   <div id="primaryLoadingPane" class="loadingPane loadingPane-active">
-    <div class="loadingPane-spinner" ></div>
+    
   </div>
   <div id="appInterface-container" />
   <script src="bundle.js"></script>
