maybe final version

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>1-800-KATRILLION</title>
+  <link rel="shortcut icon" href="http://i.imgur.com/cYvpPmr.png" type="image/x-icon">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="theme-color" content="#3E95F8" />
