--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,11 @@
   <link rel="shortcut icon" href="http://i.imgur.com/cYvpPmr.png" type="image/x-icon">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="theme-color" content="#3E95F8" />
+  <meta name="theme-color" content="#F9BDD6" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
 </head>
 
-<body>
-  <div id="primaryLoadingPane" class="loadingPane loadingPane-active">
-    
+<body>    
   </div>
   <div id="appInterface-container" />
   <script src="bundle.js"></script>
