--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,10 @@
 </head>
 
 <body>    
+  <div id="appInterface-loader" >
+    <img id="appInterface-loader-spinner" src="http://i.imgur.com/04EKlQJ.png" alt="issa party">
   </div>
-  <div id="appInterface-container" />
+  <div id="appInterface-container" /></div>
   <script src="bundle.js"></script>
 </body>
 
