finessed loader a bit

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
 
 <body>    
   <div id="appInterface-loader" >
-    <img id="appInterface-loader-spinner" src="http://i.imgur.com/04EKlQJ.png" alt="issa party">
+    <img id="appInterface-loader-spinner" src="http://i.imgur.com/04EKlQJ.png" alt="issa party"></img>
+    <span id="appInterface-loader-text">Issa Loading Ting...</span>
   </div>
   <div id="appInterface-container" /></div>
   <script src="bundle.js"></script>
