more loading messages

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <body>    
   <div id="appInterface-loader" >
     <img id="appInterface-loader-spinner" src="http://i.imgur.com/04EKlQJ.png" alt="issa party"></img>
-    <span id="appInterface-loader-text">Issa Loading Ting...</span>
+    <span id="appInterface-loader-text">Loading Tings and Badmons...</span>
   </div>
   <div id="appInterface-container" /></div>
   <script src="bundle.js"></script>
